# clawmarketer

./: .env.example  .gitignore  README.md  clawmarketer_bot.py  com.clawmarketer.anomaly.plist  com.clawmarketer.morning-brief.plist  main.py  openclaw_agent.py  openclaw_data_agent.py  report_20260325_093708.md  requirements.txt  sample_data.py  server.py
agents/: analyzer.py  charter.py  cleaner.py  fetcher.py  reporter.py  telegram_sender.py
cli/: pyproject.toml
cli/openclaw/: cli.py
openclaw/: __init__.py
research/: ai-marketing-displacement-report-2026.md
skills/clawmarketer-anomaly/: agent.py
skills/clawmarketer-copy/: agent.py
skills/clawmarketer-data/: SKILL.md  agent.py  requirements.txt
skills/clawmarketer-meta/: SKILL.md  agent.py  requirements.txt
skills/clawmarketer-morning-brief/: agent.py
static/: index.html  onboarding.html  prompts.html
tests/: conftest.py  test_bot_routing.py  test_data_agent.py  test_meta_agent.py  test_server.py
