[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openclaw"
version = "0.1.0"
description = "AI agents for your Meta Ads — powered by ClawMarketer"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
]

[project.scripts]
openclaw = "openclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw*"]
